--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -1,24 +1,38 @@
 ---
-import type { HTMLAttributes } from 'astro/types';
+import type { HTMLAttributes } from "astro/types";
 
-type Props = HTMLAttributes<'a'>;
+type Props = HTMLAttributes<"a">;
 
 const { href, class: className, ...props } = Astro.props;
-const pathname = Astro.url.pathname.replace(import.meta.env.BASE_URL, '');
+const pathname = Astro.url.pathname.replace(import.meta.env.BASE_URL, "");
 const subpath = pathname.match(/[^\/]+/g);
-const isActive = href === pathname || href === '/' + (subpath?.[0] || '');
+const isActive = href === pathname || href === "/" + (subpath?.[0] || "");
 ---
 
-<a href={href} class:list={[className, { active: isActive }]} {...props}>
-	<slot />
+<a
+  href={href}
+  class:list={[className, { active: isActive }]}
+  {...props}  
+>
+  <slot />
 </a>
+
 <style>
-	a {
-		display: inline-block;
-		text-decoration: none;
-	}
-	a.active {
-		font-weight: bolder;
-		text-decoration: underline;
-	}
+  a {
+    display: flex;
+    align-items: center;
+    gap: 0.25rem;
+    text-decoration: none;
+    transition: all 0.3s ease-in-out;
+    &:hover {
+      color: rgb(var(--primary), 0.65);
+      text-shadow: 0 0 0.5rem rgb(var(--primary), 0.65);
+    }
+    &.active {
+      color: rgb(var(--primary), 0.65);
+      text-shadow: 0 0 8px rgb(var(--primary), 0.65);
+      text-decoration: underline;
+      text-underline-offset: 2px;
+    }
+  }
 </style>
