--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,37 +1,54 @@
-/*
-  The CSS in this style tag is based off of Bear Blog's default CSS.
-  https://github.com/HermanMartinus/bearblog/blob/297026a877bc2ab2b3bdfbd6b9f7961c350917dd/templates/styles/blog/default.css
-  License MIT: https://github.com/HermanMartinus/bearblog/blob/master/LICENSE.md
- */
+@import "tailwindcss";
 
 :root {
-	--accent: #2337ff;
-	--accent-dark: #000d8a;
-	--black: 15, 18, 25;
-	--gray: 96, 115, 159;
-	--gray-light: 229, 233, 240;
-	--gray-dark: 34, 41, 57;
+	/* Colors */
+	--primary: 240, 145, 70; /*#F09146*/
+	--secondary: 18, 26, 40; /*#121A28*/
+	--accent: 162, 48, 4; /*#A23004*/
+
+	--accent-dark: 81, 48, 4; /*#513004*/
+	--dark: 30, 37, 44; /*#1E252C*/
+	--light: 255, 254, 254; /*#FFFEFE*/
+	--black: 15, 18, 25; /*#0f1219*/
+	--gray: 52, 66, 86; /*#344256*/
+	--gray-light: 229, 233, 240; /*#e5e9f0*/
+	--gray-dark: 34, 41, 57; /*#222939*/
 	--gray-gradient: rgba(var(--gray-light), 50%), #fff;
+	/* Shadows*/
 	--box-shadow:
 		0 2px 6px rgba(var(--gray), 25%), 0 8px 24px rgba(var(--gray), 33%),
 		0 16px 32px rgba(var(--gray), 33%);
+	/* Tipografías*/
+	--body: 'Inter Variable', sans-serif;
+	--mono: 'Inconsolata Variable', monospace;
+	--heading: 'Inter Tight Variable', sans-serif;
 }
-@font-face {
-	font-family: 'Atkinson';
-	src: url('/fonts/atkinson-regular.woff') format('woff');
-	font-weight: 400;
-	font-style: normal;
-	font-display: swap;
-}
-@font-face {
-	font-family: 'Atkinson';
-	src: url('/fonts/atkinson-bold.woff') format('woff');
-	font-weight: 700;
-	font-style: normal;
-	font-display: swap;
-}
+
+/* CSS General*/
 body {
-	font-family: 'Atkinson', sans-serif;
+	font-family: var(--body);	
+}
+
+.print {
+	display: none !important;
+}
+@media print {
+	.no-print {
+		display: none !important;
+	}
+	.print {
+		display: block !important;
+	}
+	article {
+		break-inside: avoid;
+	}
+	astro-dev-toolbar {
+		display: none !important;
+	}
+}
+/* 
+body {
+	font-family: var(--body);
 	margin: 0;
 	padding: 0;
 	text-align: left;
@@ -40,7 +57,7 @@ body {
 	word-wrap: break-word;
 	overflow-wrap: break-word;
 	color: rgb(var(--gray-dark));
-	font-size: 20px;
+	font-size: 16px;
 	line-height: 1.7;
 }
 main {
@@ -134,7 +151,7 @@ hr {
 	main {
 		padding: 1em;
 	}
-}
+} */
 
 .sr-only {
 	border: 0;
