--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,8 +14,8 @@ const { name, label } = basics
 
 <Layout title={`Portafolio de ${name} • ${label}`}>
 	<Header />
-	<!-- <Hero /> -->
-	<!-- <Skills /> -->
+	<Hero />
+	<Skills />
 	<BlogPosts />
 	<BlogRss />
 	<Footer />
