update rotate img

--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -111,7 +111,7 @@ const printInfo = [
       </footer>
     </header>
     <figure>
-      <img src={image} alt={name} loading="lazy" />
+      <img src={image} alt={name} loading="lazy" class="md:rotate-6" />
     </figure>
   </article>
 </Section>
