--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -54,7 +54,7 @@ import { SITE_TITLE } from "../consts";
         >Proyectos</span
       >
     </HeaderLink>
-    <HeaderLink href="/resume">
+    <HeaderLink href="/resume" target='_blank'>
       <svg
         xmlns="http://www.w3.org/2000/svg"
         width="24"
@@ -69,7 +69,7 @@ import { SITE_TITLE } from "../consts";
       <span class="text-sm font-light uppercase tracking-tight hidden md:block"
         >Resume</span
       >
-    </HeaderLink>
+    </HeaderLink>    
   </nav>
 </header>
 
